--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,9 +1,12 @@
 <ul>
  <li><a href="shopping-cart.dna">Cart</a></li>
 
-<li><a href="offerings.dna">Available Classes</a></li>
-<li><a href="your-account.dna">Your Account</a></li>
-<li><a href="logout.dna">Logout</a></li>
+<% if user_signed_in? %>
+	<%= content_tag :li, link_to("Available Classes", client_group_courses_path(current_user.client_group)) %>
+	<%= content_tag :li, link_to("Your Account", edit_user_registration_path) %>
+	<%= content_tag :li, link_to("Logout", destroy_user_session_path, :method => :delete) %>
+<% else %>
+	<%= content_tag :li, link_to("Login/Register", new_user_session_path) %>
+<% end %>
 
-<li><a href="login.dna">Login/Register</a></li>
 </ul>
