--- a/app/views/carts/_review.html.erb
+++ b/app/views/carts/_review.html.erb
@@ -4,7 +4,52 @@
 
 <%= render 'cart' %>  
 
-<%= form_for @cart, :url => update_checkout_cart_path(@cart), :html => { :method => :put, :class => 'form-horizontal'} do |f| %>
+<%
 
-  <%= f.button "Continue To Payment >>", :name => :continue_to_payment, :value => true, :class => "btn btn-large btn-primary pull-right" %>
+biz1 = 'lisa@belightfulyoga.com'
+biz2 = 'aaronm_1325084290_biz@gmail.com'
+url1 = 'https://www.paypal.com/cgi-bin/webscr'
+url2 = 'https://www.sandbox.paypal.com/cgi-bin/webscr'
+%>
+
+<%= form_tag url2, :method => :post, :class => 'form-inline' do %>
+
+
+<input type="hidden" name="cmd" value="_ext-enter" />
+<input type="hidden" name="redirect_cmd" value="_xclick" />
+
+<%= hidden_field_tag "business", biz2 %>
+
+<input type="hidden" name="rm" value="2" />
+
+<%= hidden_field_tag "amount", @cart.grand_total %>
+
+<input type="hidden" name="tax" value="0" />
+<input type="hidden" name="no_note" value="1" />
+<input type="hidden" name="currency_code" value="USD" />
+
+<%= hidden_field_tag "item_name", "Your order from Belightful Yoga (##{@cart.id})" %>
+<%= hidden_field_tag "custom", @cart.id %>
+<%= hidden_field_tag "return", receipt_cart_url(@cart) %>
+<%= hidden_field_tag "cancel_return", cart_url(@cart) %>
+<%= hidden_field_tag "notify_url", pp_callback_carts_url %>
+<%= hidden_field_tag "first_name", @cart.user.first_name %>
+<%= hidden_field_tag "last_name", @cart.user.last_name %>
+<%= hidden_field_tag "email", @cart.user.email %>
+<%= hidden_field_tag "address1", @cart.billing_address.address_1 %>
+<%= hidden_field_tag "address2", @cart.billing_address.address_2 %>
+
+<input type="hidden" name="country" value="US" />
+
+<%= hidden_field_tag "zip", @cart.billing_address.postal_code %>
+<%= hidden_field_tag "city", @cart.billing_address.city %>
+<%= hidden_field_tag "state", @cart.billing_address.state %>
+
+<input type="hidden" name="address_override" value="0" />
+<input type="hidden" name="no_shipping" value="2" />
+
+
+<%= button_tag "Continue To Payment >>", :class => "btn btn-large btn-primary pull-right" %>
+
+<br style="clear:both;">
 <% end %>
