--- a/app/views/scheduler/course_events/walkin.html.erb
+++ b/app/views/scheduler/course_events/walkin.html.erb
@@ -1,11 +1,6 @@
 <div class="page-header"><%= content_tag :h1, "Add Walk-in to '#{@course_event.event_date.strftime('%m/%d/%Y %I:%M%p')}'" %></div>
 
-<ul class="breadcrumb">
-	<li><%= link_to "Dashboard", scheduler_root_path %> <span class="divider">/</span></li>
-	<li><%= link_to "Class Lists", scheduler_course_events_path %> <span class="divider">/</span></li>
-	<li><%= link_to "#{@course_event.event_date.strftime('%m/%d/%Y %I:%M%p')}", [:scheduler, @course_event] %> <span class="divider">/</span></li>
-	<li>Walk-in</li>
-</ul>
+<%= render 'member_header', section: "walk_in" %>
 
 <%= form_for @course_event, :url => create_walkin_scheduler_course_event_path(@course_event), :html => { :class => "form-horizontal", :method => :put } do |f| %>
     <%= f.fields_for :walkins, Walkin.new(:course_event_id => @course_event.id, :attendable_type => "User") do |attendance| %>
