--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 		    	<!-- Navigation -->    
 	  </div>		    	
 
-	  <div id="home_rotate"><%= @top_right_image.text.html_safe rescue nil %></div> 
+	  <div id="home_rotate"><%= @top_right_image.text.html_safe rescue image_tag("/images/circle_boutique_01.png", :alt => "Belightful Yoga") %></div> 
 
         
     	
