--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -13,6 +13,19 @@
 	</div>
 	
 	<div class="control-group">
+	  <%= f.label :first_name, "First Name", :class => "control-label" %>
+		<div class="controls">
+	  	<%= f.text_field :first_name %>
+		</div>
+	</div>
+	<div class="control-group">
+	  <%= f.label :last_name, "Last Name", :class => "control-label" %>
+		<div class="controls">
+	  	<%= f.text_field :last_name %>
+		</div>
+	</div>
+	
+	<div class="control-group">
 	  <%= f.label :email, :class => "control-label" %>
 		<div class="controls">
 	  	<%= f.email_field :email %>
