--- a/app/views/scheduler/course_events/index.html.erb
+++ b/app/views/scheduler/course_events/index.html.erb
@@ -54,7 +54,7 @@
 		<td><%= course_event.event_date.strftime('%m/%d/%Y') %></td>
 		<td><%= course_event.event_date.strftime('%I:%M%p') %></td>
 		<td><%= course_event.course.client_group.title %></td>
-		<td><%= content_tag :span, course_event.course.teacher.full_name, :class => "label", :style => "background-color:#{course_event.course.teacher.color};color:black;" %></td>
+		<td><%= content_tag :span, course_event.course.teacher.full_name, :class => "label", :style => "background-color:##{course_event.course.teacher.color};color:black;" %></td>
 		<td><span class="label">ID: <%= course_event.course.id %></span> <%= "#{course_event.course.default_title}" %>
 		<td>
 		    <% badge_class = course_event.attendees.empty? ? "badge badge-important" : "badge badge-success" %>
