more error stuffs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 		<menu><div id="topNav"><%= render 'layouts/top_nav' %></div></menu>
 		<!-- <h1>Belightful Yoga.  Mobile Yoga, we come to U.</h1> -->
 		<div id="logo">
-			<a href="index.dna"><img src="/images/logo-header.gif" height="210" width="652" border="0" /></a>
+			<a href="/"><img src="/images/logo-header.gif" height="210" width="652" border="0" /></a>
 			<!-- Navigation -->
 			<nav><div id="nav"><%= render 'layouts/nav' %></div></nav>
 		    	<!-- Navigation -->    
