--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,7 +9,7 @@
 <tr style="font-size: 14px;color: #262262;line-height: 150%;font-family: Helvetica;">
 <td align="center">
 <table border="0" cellspacing="0" cellpadding="0" width="600" style="margin-top: 10px;background-color:#ffffff;">
-<tr><td><img src="http://belightfulyoga.com/images/newsletter_header.1.jpg" alt="" border="0" style="margin: 0; padding: 0;max-width: 600px;" /></td></tr>
+<tr><td><img src="http://www.belightfulyoga.com/images/newsletter_header.1.jpg" alt="" border="0" style="margin: 0; padding: 0;max-width: 600px;" /></td></tr>
 
 <tr>
  <td style="padding:20px;">
