--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -2,6 +2,7 @@
  *= require_self
  *= require fullcalendar
  *= require spectrum
+ *= require custom-theme-bs/jquery-ui-1.8.16.custom
  *= require_tree ./admin
 */
 
