--- a/app/views/layouts/admin/_nav.html.erb
+++ b/app/views/layouts/admin/_nav.html.erb
@@ -6,11 +6,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand logo" href="#">Belightful Yoga <strong>Admin</strong></a>
+      <a class="brand logo" href="#">Belightful Yoga <strong>Scheduler</strong></a>
       <div class="container-fluid nav-collapse">
 
 		<ul class="nav pull-right">
-			<li><%#= link_to "Dashboard", admin_root_path %></li>
+			<li><%= link_to "Admin Module", "/admin" %></li>
 			<% if signed_in?(:admin) %>
 			<li class="dropdown">
 				<%= link_to raw("<i class='icon-user icon-white'></i> #{current_admin.first_name} #{current_admin.last_name} <b class='caret'></b>"), '#', :class => "dropdown-toggle", "data-toggle" => "dropdown" %>
@@ -20,13 +20,6 @@
 			  </ul>
 			</li>
 			<% end %>
-      <li class="divider-vertical"></li>
-			<li class="dropdown">
-				<%= link_to raw("<i class='icon-cog icon-white'></i> System <b class='caret'></b>"), '#', :class => "dropdown-toggle", "data-toggle" => "dropdown" %>
-			  <ul class="dropdown-menu">
-					<li><%#= link_to "Admin Users", admin_admins_path %></li>
-			  </ul>
-			</li>
     </ul>
         
 
