--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Admin Module - Belightful Yoga</title>
+    <title>Schedule Module - Belightful Yoga</title>
     <%= csrf_meta_tags %>
 
     <!--[if lt IE 9]>
@@ -16,7 +16,6 @@
       
     </style>
     <%= stylesheet_link_tag "admin", :media => "all" %>
-	<%= stylesheet_link_tag 'custom-theme-bs/jquery-ui-1.8.16.custom', :media => 'screen' %>
 	<%= javascript_include_tag "admin" %>
     <link href="/assets/favicon.ico" rel="shortcut icon" type="image/x-icon">
   </head>
