--- a/app/views/scheduler/courses/unscheduled.html.erb
+++ b/app/views/scheduler/courses/unscheduled.html.erb
@@ -9,9 +9,6 @@
 	<li class="active"><%= link_to raw("<i class='icon-th-list'></i> List"), unscheduled_scheduler_courses_path %></li>
 </ul>
 
-<%= l Date.today, :format => :default %><br>
-<%= l Time.now, :format => :long %>
-
 <table class="table table-condensed table-striped">
 <thead>
 	<tr>
@@ -31,11 +28,10 @@
 		<td><%= course.end_date.strftime('%m/%d/%Y') %></td>
 		<td><%= course.client_group.title %></td>
 		<td><%= content_tag :span, course.teacher.full_name, :class => "label", :style => "background-color:##{course.teacher.color};color:black;" %></td>
-		<td><span class="label">ID: <%= course.id %></span> <%= "#{course.default_title}" %>
+		<td><span class="label">ID: <%= course.id %></span> <%= "#{course.default_title}" %></td>
 		<td nowrap><%= link_to raw("<i class='icon-edit'></i> Schedule"), edit_scheduler_course_path(course), :class => "btn btn-small"%></td>
 	</tr>	
 	<% end %>
-</tbody>	
-
+</tbody>	    
 	
 </table>
