--- a/app/views/carts/_review.html.erb
+++ b/app/views/carts/_review.html.erb
@@ -4,21 +4,13 @@
 
 <%= render 'cart' %>  
 
-<%
-
-biz1 = 'lisa@belightfulyoga.com'
-biz2 = 'aaronm_1325084290_biz@gmail.com'
-url1 = 'https://www.paypal.com/cgi-bin/webscr'
-url2 = 'https://www.sandbox.paypal.com/cgi-bin/webscr'
-%>
-
-<%= form_tag url1, :method => :post, :class => 'form-inline' do %>
+<%= form_tag ENV['PP_URI'], :method => :post, :class => 'form-inline' do %>
 
 
 <input type="hidden" name="cmd" value="_ext-enter" />
 <input type="hidden" name="redirect_cmd" value="_xclick" />
 
-<%= hidden_field_tag "business", biz1 %>
+<%= hidden_field_tag "business", ENV['PP_USERNAME'] %>
 
 <input type="hidden" name="rm" value="2" />
 
