--- a/app/views/scheduler/course_events/_attendee.html.erb
+++ b/app/views/scheduler/course_events/_attendee.html.erb
@@ -1,7 +1,13 @@
 <td>
 <% if f.object.walk_in? %>
-<%= f.text_field :paid, :value => f.object.paid, :class => "span2" %>
+    <%= f.text_field :paid, :value => f.object.paid, :class => "span2" %>
+    <%= f.select :payment_type, options_for_select(['cash', 'check']), {}, :class => "span2" %>
+<% else%>
+    <% registration = @course_event.course_registrations.find_by_user_id(f.object.attendable.id) %>
+    <%= number_to_currency(registration.paid / @course_event.course.course_events.length) if !registration.nil? %>
 <% end %>
+
+
 </td>
 <td>
 <%= f.hidden_field :course_event_id, :value => f.object.course_event_id %>
