--- a/app/views/layouts/admin/_scheduler_nav.html.erb
+++ b/app/views/layouts/admin/_scheduler_nav.html.erb
@@ -2,12 +2,14 @@
 <ul class="nav nav-list">
     <li class="nav-header">Scheduling</li>
     <li><%= link_to "Calendar", scheduler_root_path %></li>
-    <li><%= link_to "Unscheduled Courses", unscheduled_scheduler_courses_path %></li>
-    <li><%= link_to "Current Courses", scheduler_courses_path %></li>
+    <li><%= link_to "Unscheduled Courses", unscheduled_scheduler_courses_path if current_admin.admin? %></li>
+    <li><%= link_to "Class List", scheduler_course_events_path %></li>
+    <li><%= link_to "Course List", scheduler_courses_path %></li>
     
+    <!-- 
     <li class="nav-header">Attendance</li>
-    <li><%= link_to "Class Lists", scheduler_course_events_path %></li>
     <li><%#= link_to "Registrant Lists", scheduler_course_registrations_path %></li>
+    -->
     
     <li class="nav-header">Accounting & Payroll</li>
     <%= content_tag :li, link_to("Pay Outs", pay_outs_scheduler_course_events_path) %>
