--- a/app/views/scheduler/course_events/index.html.erb
+++ b/app/views/scheduler/course_events/index.html.erb
@@ -14,7 +14,7 @@
 <%= form_tag scheduler_course_events_path, :method => 'get', :class => 'form-inline' do %>
 	<div class="well">
 	    <strong>Filter by:</strong> 
-	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(Teacher.all.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => params[:teacher]), :include_blank => true, :class => "span2" %>
+	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(@teachers.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => teacher), :include_blank => current_admin.admin?, :class => "span2" %>
 	    &nbsp; Client: <%= select_tag :client, options_for_select(ClientGroup.all.collect { |client| [client.title, client.id] }, :selected => params[:client]), :include_blank => true, :class => "span2" %>
 	    &nbsp; Start Date: <%= text_field_tag :start_date, start_date, :class => "datepicker", :style => 'width:75px;' %>
 	    &nbsp; End Date: <%= text_field_tag :end_date, params[:end_date], :class => "datepicker", :style => 'width:75px;' %>
@@ -39,7 +39,7 @@
 	  <th><%= sortable "event_date", "Date" %></th>
 	  <th><%= sortable "event_date", "Time" %></th>
 	  <th><%= sortable "client_groups.title", "Client Group" %></th>
-	  <th><%= sortable "admins.id", "Teacher" %></th>
+	  <th><%= sortable "course_events.teacher_id", "Teacher" %></th>
 	  <th><%= sortable "courses.id", "Course" %></th>
 	  <th>Attendance</th>
 	  <th>Roster</th>
@@ -54,7 +54,7 @@
 		<td><%= course_event.event_date.strftime('%m/%d/%Y') %></td>
 		<td><%= course_event.event_date.strftime('%I:%M%p') %></td>
 		<td><%= course_event.course.client_group.title %></td>
-		<td><%= content_tag :span, course_event.course.teacher.full_name, :class => "label", :style => "background-color:##{course_event.course.teacher.color};color:black;" %></td>
+		<td><%= content_tag :span, course_event.teacher.full_name, :class => "label", :style => "background-color:##{course_event.teacher.color};color:black;" %></td>
 		<td><span class="label">ID: <%= course_event.course.id %></span> <%= "#{course_event.course.default_title}" %>
 		<td>
 		    <% badge_class = course_event.attendees.empty? ? "badge badge-important" : "badge badge-success" %>
