--- a/app/views/scheduler/course_events/pay_outs.html.erb
+++ b/app/views/scheduler/course_events/pay_outs.html.erb
@@ -14,7 +14,7 @@
 <%= form_tag pay_outs_scheduler_course_events_path, :method => 'get', :class => 'form-inline' do %>
 	<div class="well">
 	    <strong>Filter by:</strong> 
-	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(Teacher.all.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => params[:teacher]), :include_blank => true, :class => "span2" %>
+	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(@teachers.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => teacher), :include_blank => current_admin.admin?, :class => "span2" %>
         <!-- 
 	    &nbsp; End Date: <%= text_field_tag :end_date, params[:end_date], :class => "datepicker", :style => 'width:75px;' %>
 	    -->
@@ -39,7 +39,7 @@
 	  <th><%= sortable "event_date", "Date" %></th>
 	  <th><%= sortable "event_date", "Time" %></th>
 	  <th><%= sortable "client_groups.title", "Client Group" %></th>
-	  <th><%= sortable "admins.id", "Teacher" %></th>
+	  <th><%= sortable "course_events.teacher_id", "Teacher" %></th>
 	  <th><%= sortable "courses.id", "Course" %></th>
 	  <th>Pay Out</th>
   	  <th></th>
@@ -53,17 +53,20 @@
 		<td><%= course_event.event_date.strftime('%m/%d/%Y') %></td>
 		<td><%= course_event.event_date.strftime('%I:%M%p') %></td>
 		<td><%= course_event.course.client_group.title %></td>
-		<td><%= content_tag :span, course_event.course.teacher.full_name, :class => "label", :style => "background-color:#{course_event.course.teacher.color};color:black;" %></td>
+		<td><%= content_tag :span, course_event.teacher.full_name, :class => "label", :style => "background-color:##{course_event.teacher.color};color:black;" %></td>
 		<td><span class="label">ID: <%= course_event.course.id %></span> <%= "#{course_event.course.default_title}" %>
 		    <td><%= number_to_currency course_event.total_pay_out %></td>
-    		<td><%= link_to raw("<i class='icon-briefcase'></i> Accounting"), accounting_scheduler_course_event_path(course_event), :class => "btn btn-mini"%> <%= link_to raw("<i class='icon-th-list'></i> Roster"), [:scheduler, course_event], :class => "btn btn-mini"%></td>
+    		<td><%= link_to raw("<i class='icon-briefcase'></i> Accounting"), accounting_scheduler_course_event_path(course_event), :class => "btn btn-mini" if current_admin.admin?%> <%= link_to raw("<i class='icon-th-list'></i> Roster"), [:scheduler, course_event], :class => "btn btn-mini"%></td>
 	</tr>	
 	<% end %>
 </tbody>	
 
 <tfoot>
     <tr>
-        <td colspan="8"><%= submit_tag "Mark Selected 'Paid'", :class => "btn btn-primary" %>
+        <td colspan="8"><strong>Total Owed:</strong> <%= number_to_currency(@total_pay_out)%></td>
+    </tr>    
+    <tr>
+        <td colspan="8"><%= submit_tag "Mark Selected 'Paid'", :class => "btn btn-primary" if current_admin.admin? %>
         </td>
     </tr>        
 </tfoot>    
