--- a/app/views/scheduler/courses/index.html.erb
+++ b/app/views/scheduler/courses/index.html.erb
@@ -13,7 +13,7 @@
 <%= form_tag scheduler_courses_path, :method => 'get', :class => 'form-inline' do %>
 	<div class="well">
 	    <strong>Filter by:</strong> 
-	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(Teacher.all.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => params[:teacher]), :include_blank => true, :class => "span2" %>
+	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(@teachers.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => teacher), :include_blank => current_admin.admin?, :class => "span2" %>
 	    &nbsp; Client: <%= select_tag :client, options_for_select(ClientGroup.all.collect { |client| [client.title, client.id] }, :selected => params[:client]), :include_blank => true, :class => "span2" %>
 	    &nbsp; Start Date: <%= text_field_tag :start_date, params[:start_date], :class => "datepicker", :style => 'width:75px;' %>
 	    &nbsp; End Date: <%= text_field_tag :end_date, end_date, :class => "datepicker", :style => 'width:75px;' %>
@@ -51,7 +51,7 @@
         <td><%= course.end_date.strftime('%m/%d/%Y') %></td>
         <td><%= course.client_group.title %></td>
         <td><%= content_tag :span, course.teacher.full_name, :class => "label", :style => "background-color:##{course.teacher.color};color:black;" %></td>
-        <td nowrap><%= link_to raw("<i class='icon-edit'></i> Schedule"), edit_scheduler_course_path(course), :class => "btn btn-small"%></td>
+        <td nowrap><%= link_to raw("<i class='icon-edit'></i> Schedule"), edit_scheduler_course_path(course), :class => "btn btn-small" if current_admin.admin? %></td>
     </tr>    
     <% end %>
 </tbody>    
