--- a/app/views/layouts/admin/_scheduler_nav.html.erb
+++ b/app/views/layouts/admin/_scheduler_nav.html.erb
@@ -1,10 +1,11 @@
 <div class="well">
 <ul class="nav nav-list">
     <li class="nav-header">Scheduling</li>
-    <li><%= link_to "Calendar", scheduler_root_path %></li>
-    <li><%= link_to "Unscheduled Courses", unscheduled_scheduler_courses_path if current_admin.admin? %></li>
-    <li><%= link_to "Class List", scheduler_course_events_path %></li>
-    <li><%= link_to "Course List", scheduler_courses_path %></li>
+    <li><%= link_to raw("<i class='icon-calendar'></i> Calendar"), scheduler_root_path %></li>
+    <li><%= link_to raw("<i class='icon-print'></i> Calendar (Print Version)"), scheduler_root_path(:print => true) %></li>
+    <li><%= link_to raw("<i class='icon-calendar-empty'></i> Unscheduled Courses"), unscheduled_scheduler_courses_path if current_admin.admin? %></li>
+    <li><%= link_to raw("<i class='icon-list'></i> Class List"), scheduler_course_events_path %></li>
+    <li><%= link_to raw("<i class='icon-list'></i> Course List"), scheduler_courses_path %></li>
     
     <!-- 
     <li class="nav-header">Attendance</li>
@@ -12,6 +13,6 @@
     -->
     
     <li class="nav-header">Accounting & Payroll</li>
-    <%= content_tag :li, link_to("Pay Outs", pay_outs_scheduler_course_events_path) %>
+    <%= content_tag :li, link_to(raw("<i class='icon-money'></i> Pay Outs"), pay_outs_scheduler_course_events_path) %>
 </ul>   
 </div> 
