--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 <div id="cartWin">
 <% @events.each do |event| %>
     <%= content_tag :h3, event.title %>
-    <%= content_tag :strong, "#{event.start_date.strftime("%a")}., #{l(event.start_date, :format => :long)} - #{l(event.end_date, :format => :long)}, #{event.start_time.strftime('%I:%M %p')} - #{event.end_time.strftime('%I:%M %p')}" unless event.start_date.blank? %>
+    <%= content_tag :strong, event.datetimestring unless event.datetimestring.nil? %>
     <br>
     <%= event.description.html_safe %>
     <hr>
