--- a/app/views/scheduler/course_events/_member_header.html.erb
+++ b/app/views/scheduler/course_events/_member_header.html.erb
@@ -8,5 +8,6 @@
 <ul class="nav nav-tabs">
 	<%= content_tag :li, link_to(raw("<i class='icon-eye-open'></i> Roster"), [:scheduler, @course_event]), class: section == "show" ? "active" : nil %>
 	<%= content_tag :li, link_to(raw("<i class='icon-plus'></i> Walk-in"), walkin_scheduler_course_event_path(@course_event)), class: section == "walk_in" ? "active" : nil %>
+	<%= content_tag :li, link_to(raw("<i class='icon-plus'></i> Registration"), registration_scheduler_course_event_path(@course_event)), class: section == "registration" ? "active" : nil %>
     <%= content_tag :li, link_to(raw("<i class='icon-briefcase'></i> Accounting"), accounting_scheduler_course_event_path(@course_event)), class: section == "accounting" ? "active" : nil if current_admin.admin? %>
 </ul>
