--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -17,6 +17,9 @@
     </style>
     <%= stylesheet_link_tag "admin", :media => "all" %>
 	<%= javascript_include_tag "admin" %>
+	
+	<%= content_for(:head) %>
+	
     <link href="/assets/favicon.ico" rel="shortcut icon" type="image/x-icon">
   </head>
   <body>
